<?xml version="1.0" encoding="UTF-8"?>
<!--
  Springie - tensegrity simulator.
  Builds the whole project (including the bundled com.tifsoft support
  classes that live under source/) with Maven.

  The historic source tree is kept in place: sources live under "source/"
  rather than Maven's default src/main/java, to avoid a 400-file move.

  Tests live in the same tree, in the same packages as the code they test.
  The test compilation is restricted to *Test.java plus the small set of
  test-scope helpers (benchmark/analysis utilities) via testIncludes below.
-->
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.springie</groupId>
  <artifactId>springie</artifactId>
  <version>1.02-beta-5-SNAPSHOT</version>
  <packaging>jar</packaging>
  <name>Springie</name>
  <description>A tensegrity simulator using Java.</description>
  <url>https://springie.com/</url>

  <licenses>
    <license>
      <name>Public Domain</name>
    </license>
  </licenses>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.release>17</maven.compiler.release>
    <junit.version>5.10.3</junit.version>
    <jmh.version>1.37</jmh.version>
    <slf4j.version>2.0.16</slf4j.version>
    <logback.version>1.5.12</logback.version>
  </properties>

  <build>
    <!-- Historic layout: everything already lives under source/. -->
    <sourceDirectory>source</sourceDirectory>
    <testSourceDirectory>source</testSourceDirectory>
    <!-- Non-Java resources (images, xml presets) live alongside the sources. -->
    <resources>
      <resource>
        <directory>source</directory>
        <excludes>
          <exclude>**/*.java</exclude>
        </excludes>
      </resource>
    </resources>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.13.0</version>
        <configuration>
          <!-- Test classes live in the same tree as the main sources:
               keep them out of the main compilation... -->
          <excludes>
            <exclude>**/*Test.java</exclude>
            <exclude>**/GuiTestSupport.java</exclude>
            <exclude>**/SqrtCandidates.java</exclude>
            <exclude>**/SquareRootAnalysis.java</exclude>
            <exclude>**/SquareRootBenchmark.java</exclude>
          </excludes>
          <!-- ...and compile only them (plus test-scope helpers) as tests. -->
          <testIncludes>
            <testInclude>**/*Test.java</testInclude>
            <testInclude>**/GuiTestSupport.java</testInclude>
            <testInclude>**/SqrtCandidates.java</testInclude>
            <testInclude>**/SquareRootAnalysis.java</testInclude>
            <testInclude>**/SquareRootBenchmark.java</testInclude>
          </testIncludes>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.2.5</version>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-shade-plugin</artifactId>
        <version>3.6.0</version>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>shade</goal>
            </goals>
            <configuration>
              <transformers>
                <!-- Merge META-INF/services so the SLF4J provider is found. -->
                <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                  <mainClass>com.springie.FrEnd</mainClass>
                </transformer>
              </transformers>
            </configuration>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>

  <dependencies>
    <!-- Logging: SLF4J API + Logback implementation. -->
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
      <version>${slf4j.version}</version>
    </dependency>
    <dependency>
      <groupId>ch.qos.logback</groupId>
      <artifactId>logback-classic</artifactId>
      <version>${logback.version}</version>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter</artifactId>
      <version>${junit.version}</version>
      <scope>test</scope>
    </dependency>
    <!-- JMH microbenchmarks for the SquareRoot profiling work. -->
    <dependency>
      <groupId>org.openjdk.jmh</groupId>
      <artifactId>jmh-core</artifactId>
      <version>${jmh.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.openjdk.jmh</groupId>
      <artifactId>jmh-generator-annprocess</artifactId>
      <version>${jmh.version}</version>
      <scope>test</scope>
    </dependency>
  </dependencies>
</project>
